[package]
name = "simplebase"
license = "MIT"
version = "0.3.34"
readme = "Readme.md"
repository = "https://github.com/agivney/simplebase"
authors = ["Arthur Givney <agiv888@gmail.com>"]
description = "A simple to use database library"
keywords = ["database", "simple","simplebase"]
categories = ["database-implementations"]


[dependencies]
fs2 = "0.4.3"


